[package]
name = "example_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "tokio_rt", "async"] }
napi-derive = { version = "2", features = ["type-def"] }
futures = "0.3"
tokio = { version = "1", features = ["default", "fs"] }

[build-dependencies]
napi-build = "1"
